# wifi360_evb_pico

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/ap/: ap.cpp  ap_def.h
src/bsp/: bsp.c  bsp.h
src/hw/: hw.c  hw_def.h
src/lib/WizFi360-EVB-Pico-C/: CMakeLists.txt  wizfi360_evb_pico_c-patch.cmake
tools/: down.py
